--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-## A quick look at Vanilla vs. jquery.
+# A quick look at Vanilla vs. jquery.
 ## Clone the repo and install the dependencies to see different ways of making requests using Vanilla and jQuery!
 
 
